--- a/src/sass/project/_p-consult.scss
+++ b/src/sass/project/_p-consult.scss
@@ -6,23 +6,24 @@
 }
 
 .p-consult .l-inner {
-  display: grid;
-  gap: rem(28);
-  align-items: start;
+
+  margin-left: auto;
+  margin-right: auto;
+
   @include mq("md") {
-    grid-template-columns: 1fr rem(305);
-    align-items: center;
-    gap: rem(40);
+    max-width: rem(851);
   }
 }
 
-.p-consult__inner {
-  min-width: 0;
+.p-consult__head-box {
+  display: flex;
+  align-items: center;
+  
 }
-
 .p-consult__head {
   text-align: center;
   margin-bottom: rem(22);
+
   @include mq("md") {
     text-align: left;
     margin-bottom: rem(26);
@@ -30,10 +31,10 @@
 }
 
 .p-consult__title {
-  margin: 0;
   color: #1a1919;
   font-family: "Noto Sans JP", sans-serif;
   font-weight: 700;
+  white-space: nowrap;
 }
 
 .p-consult__title-top {
@@ -42,16 +43,16 @@
   line-height: 1.06;
   letter-spacing: 0.028em;
   margin-bottom: rem(10);
+
   @include mq("md") {
     font-size: rem(36);
   }
 }
 
 .p-consult__title-row {
-  display: inline-flex;
+  display: flex;
   align-items: baseline;
   gap: rem(6);
-  flex-wrap: wrap;
 }
 
 .p-consult__title-main {
@@ -59,6 +60,7 @@
   font-size: rem(44);
   line-height: 0.9;
   letter-spacing: 0.014em;
+
   @include mq("md") {
     font-size: rem(72);
   }
@@ -68,6 +70,7 @@
   font-size: rem(22);
   line-height: 1.06;
   letter-spacing: -0.055em;
+
   @include mq("md") {
     font-size: rem(36);
   }
@@ -86,6 +89,7 @@
   line-height: 1.8;
   letter-spacing: 0.055em;
   color: #1a1919;
+
   @include mq("md") {
     font-size: rem(18);
   }
@@ -93,10 +97,12 @@
 
 .p-consult__figure {
   width: 100%;
-  max-width: rem(305);
-  margin: 0 auto;
+  
   @include mq("md") {
-    margin: 0;
+    max-width: rem(305);
+    min-width: rem(305);
+    margin-left: auto;
+    margin-left: rem(-40);
   }
 }
 
