--- a/src/sass/project/_p-trouble.scss
+++ b/src/sass/project/_p-trouble.scss
@@ -51,10 +51,13 @@
   display: grid;
   gap: rem(24);
   align-items: start;
+  margin-left: auto;
+  margin-right: auto;
   @include mq("md") {
     grid-template-columns: rem(305) 1fr;
     gap: rem(40);
     align-items: center;
+    max-width: rem(906);
   }
 }
 
