--- a/src/sass/project/_p-mv.scss
+++ b/src/sass/project/_p-mv.scss
@@ -1,26 +1,96 @@
 @use "../global" as *;
 
 .p-mv {
-  padding-top: rem(98);
+  background: linear-gradient(to right, #1D9B93 0%, #00BB99 100%);
+  padding-top: rem(64);
+  overflow-x: clip;
 }
 
-.p-mv__img img {
-  aspect-ratio: 1400 / 634;
-  object-fit: cover;
+.p-mv__inner {
+  max-width: rem(1280);
   width: 100%;
-  height: auto;
+  padding-right: $padding-sp;
+  padding-left: $padding-sp;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.p-mv__content {
+  display: flex;
+  align-items: flex-end;
+}
+
+.p-mv__left {
+  max-width: rem(848);
+  padding-bottom: rem(64);
+}
+
+.p-mv__lead {
+  font-size: rem(38);
+  font-weight: 700;
+  color: #fff;
+  line-height: calc(54 / 38);
 }
 
 .p-mv__title {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border: 0;
+  font-size: rem(86);
+  font-weight: 700;
+  color: #fff;
+  display: flex;
+  align-items: center;
+}
+
+.p-mv__title-img {
+  max-width: rem(493);
+}
+
+.p-mv__title-img img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  object-position: center center;
+}
+
+.p-mv__box {}
+
+.p-mv__box-img {
+  max-width: rem(848);
+  margin-top: rem(24);
+}
+.p-mv__box-img img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  object-position: center center;
+}
+
+
+
+.p-mv__bottom-text {
+  font-size: rem(36);
+  color: #fff;
+  line-height: calc(55 / 38);
+  font-weight: 700;
+  margin-top: rem(24);
+}
+
+.p-mv__img {
+  margin-right: calc(50% - 50vw);
+  width: 37vw;
+  margin-top: rem(64);
+  margin-left: rem(-40);
+
+  @include mq(lg) {
+    margin-left: initial;
+    width: 40vw;
+  }
+}
+
+.p-mv__img img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  object-position: center center;
 }
 
 .p-mv__copy-box {
@@ -71,6 +141,7 @@
   margin-left: auto;
   text-decoration: none;
   transition: transform 0.2s ease, box-shadow 0.2s ease, filter 0.2s ease;
+
   @include mq("md") {
     min-height: rem(106);
     gap: rem(16);
@@ -97,6 +168,7 @@
   display: block;
   width: rem(24);
   height: rem(24);
+
   @include mq("md") {
     width: rem(32);
     height: rem(32);
@@ -109,6 +181,7 @@
   font-size: rem(20);
   line-height: 1;
   text-align: center;
+
   @include mq("md") {
     font-size: rem(32);
   }
