--- a/src/sass/project/_p-trouble.scss
+++ b/src/sass/project/_p-trouble.scss
@@ -18,6 +18,7 @@
   line-height: 1.33;
   margin-top: 0;
   margin-bottom: rem(12);
+
   @include mq("md") {
     font-size: rem(48);
   }
@@ -42,6 +43,7 @@
   letter-spacing: 0.035em;
   color: #1a1919;
   margin: 0;
+
   @include mq("md") {
     font-size: rem(28);
   }
@@ -53,6 +55,7 @@
   align-items: start;
   margin-left: auto;
   margin-right: auto;
+
   @include mq("md") {
     grid-template-columns: rem(305) 1fr;
     gap: rem(40);
@@ -65,6 +68,7 @@
   width: 100%;
   max-width: rem(305);
   margin: 0 auto;
+
   @include mq("md") {
     margin: 0;
   }
@@ -89,6 +93,7 @@
   padding-top: rem(18);
   padding-bottom: rem(18);
   border-bottom: rem(2) dashed #a9a9a9;
+
   @include mq("md") {
     gap: rem(18);
     padding-top: rem(20);
@@ -105,6 +110,7 @@
   width: rem(36);
   height: rem(36);
   margin-top: rem(2);
+
   @include mq("md") {
     width: rem(40);
     height: rem(36);
@@ -117,8 +123,32 @@
   font-size: rem(18);
   line-height: 1.5;
   color: #1a1919;
-  margin: 0;
+
   @include mq("md") {
     font-size: rem(26);
   }
+}
+
+.p-trouble__text span {
+  color: #ee5a24;
+}
+
+.p-trouble__arrow {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: rem(80);
+  width: 100%;
+  margin-top: rem(20);
+  @include mq("md") {
+    max-width: rem(160);
+
+  }
+}
+
+.p-trouble__arrow img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  object-position: center center;
+
 }
