--- a/src/sass/project/_p-consult.scss
+++ b/src/sass/project/_p-consult.scss
@@ -1,8 +1,14 @@
 @use "../global" as *;
 
 .p-consult {
-  padding-top: rem(56);
-  padding-bottom: rem(72);
+  padding-top: rem(24);
+  padding-bottom: rem(56);
+
+  @include mq(md) {
+    padding-top: rem(56);
+    padding-bottom: rem(72);
+
+  }
 }
 
 .p-consult .l-inner {
@@ -16,10 +22,12 @@
 }
 
 .p-consult__head-box {
-  display: flex;
-  align-items: center;
-  
+  @include mq(md) {
+    display: flex;
+    align-items: center;
+  }
 }
+
 .p-consult__head {
   text-align: center;
   margin-bottom: rem(22);
@@ -39,7 +47,7 @@
 
 .p-consult__title-top {
   display: block;
-  font-size: rem(22);
+  font-size: rem(20);
   line-height: 1.06;
   letter-spacing: 0.028em;
   margin-bottom: rem(10);
@@ -57,7 +65,7 @@
 
 .p-consult__title-main {
   color: #00bb99;
-  font-size: rem(44);
+  font-size: rem(32);
   line-height: 0.9;
   letter-spacing: 0.014em;
 
@@ -67,7 +75,7 @@
 }
 
 .p-consult__title-sub {
-  font-size: rem(22);
+  font-size: rem(20);
   line-height: 1.06;
   letter-spacing: -0.055em;
 
@@ -79,6 +87,10 @@
 .p-consult__body {
   display: grid;
   gap: rem(18);
+  margin-top: rem(24);
+  @include mq(md){
+    margin-top: initial;
+  }
 }
 
 .p-consult__text {
@@ -105,11 +117,13 @@
 
 .p-consult__figure {
   width: 100%;
-  
+  max-width: rem(200);
+  margin-left: auto;
+  margin-right: auto;
   @include mq("md") {
+    margin-right: initial;
     max-width: rem(305);
     min-width: rem(305);
-    margin-left: auto;
     margin-left: rem(-40);
   }
 }
