--- a/src/sass/project/_p-mv.scss
+++ b/src/sass/project/_p-mv.scss
@@ -2,8 +2,13 @@
 
 .p-mv {
   background: linear-gradient(to right, #1D9B93 0%, #00BB99 100%);
-  padding-top: rem(64);
   overflow-x: clip;
+  padding-top: rem(40);
+
+  @include mq(md) {
+    padding-top: rem(64);
+
+  }
 }
 
 .p-mv__inner {
@@ -16,32 +21,54 @@
 }
 
 .p-mv__content {
-  display: flex;
-  align-items: flex-end;
+  @include mq(md) {
+    display: flex;
+    align-items: flex-end;
+
+  }
 }
 
 .p-mv__left {
-  max-width: rem(848);
-  padding-bottom: rem(64);
+  @include mq(md) {
+    max-width: rem(848);
+    padding-bottom: rem(64);
+
+  }
 }
 
 .p-mv__lead {
-  font-size: rem(38);
   font-weight: 700;
   color: #fff;
-  line-height: calc(54 / 38);
+  font-size: rem(20);
+  line-height: 1.6;
+
+  @include mq(md) {
+    line-height: calc(54 / 38);
+
+    font-size: rem(38);
+  }
 }
 
 .p-mv__title {
-  font-size: rem(86);
   font-weight: 700;
   color: #fff;
-  display: flex;
-  align-items: center;
+  font-size: rem(40);
+  margin-top: rem(16);
+
+  @include mq(md) {
+    font-size: rem(86);
+    margin-top: initial;
+    display: flex;
+    align-items: center;
+
+  }
 }
 
 .p-mv__title-img {
-  max-width: rem(493);
+  @include mq(md) {
+    max-width: rem(493);
+
+  }
 }
 
 .p-mv__title-img img {
@@ -57,6 +84,7 @@
   max-width: rem(848);
   margin-top: rem(24);
 }
+
 .p-mv__box-img img {
   width: 100%;
   height: auto;
@@ -67,20 +95,32 @@
 
 
 .p-mv__bottom-text {
-  font-size: rem(36);
   color: #fff;
   line-height: calc(55 / 38);
   font-weight: 700;
-  margin-top: rem(24);
+  font-size: rem(20);
+  margin-top: rem(16);
+
+  @include mq(md) {
+    font-size: rem(36);
+    margin-top: rem(24);
+
+  }
 }
 
 .p-mv__img {
   margin-right: calc(50% - 50vw);
-  width: 37vw;
-  margin-top: rem(64);
-  margin-left: rem(-40);
+  margin-left: calc(50% - 50vw);
+  width: 100vw;
+
+  @include mq(md) {
+    width: 37vw;
+    margin-left: rem(-40);
+
+  }
 
   @include mq(lg) {
+    margin-top: rem(64);
     margin-left: initial;
     width: 40vw;
   }
@@ -95,8 +135,14 @@
 
 .p-mv__copy-box {
   background-color: #005852;
-  padding-top: rem(46);
-  padding-bottom: rem(66);
+  padding-top: rem(24);
+  padding-bottom: rem(32);
+
+  @include mq(md) {
+    padding-top: rem(46);
+    padding-bottom: rem(66);
+
+  }
 }
 
 .p-mv__copy {
@@ -112,21 +158,31 @@
 .p-mv__copy-mark {
   font-family: "YuGothic", "Yu Gothic", "Hiragino Kaku Gothic ProN", "Hiragino Sans", sans-serif;
   font-weight: 500;
-  font-size: rem(24);
   line-height: 1.5;
+  font-size: rem(20);
+
+  @include mq(md) {
+    font-size: rem(24);
+
+  }
 }
 
 .p-mv__copy-text {
   font-family: "Noto Sans JP", sans-serif;
   font-weight: 900;
-  font-size: rem(29);
   line-height: 1.25;
   letter-spacing: 0.02em;
+  font-size: rem(20);
+
+  @include mq(md) {
+    font-size: rem(29);
+
+  }
 }
 
 .p-mv__cta {
   background-color: #ff7600;
-  border-radius: rem(60);
+  border-radius: 9999px;
   box-shadow: 0 rem(3) 0 #d96500;
   color: $white;
   display: flex;
@@ -135,15 +191,16 @@
   gap: rem(12);
   width: 100%;
   max-width: rem(640);
-  min-height: rem(76);
-  padding: rem(18) rem(20);
   margin-right: auto;
   margin-left: auto;
   text-decoration: none;
   transition: transform 0.2s ease, box-shadow 0.2s ease, filter 0.2s ease;
-
+  padding: rem(8) rem(16);
+  min-height: rem(56);
+  
   @include mq("md") {
     min-height: rem(106);
+    padding: rem(18) rem(20);
     gap: rem(16);
   }
 }
