--- a/src/sass/project/_p-trouble.scss
+++ b/src/sass/project/_p-trouble.scss
@@ -1,20 +1,30 @@
 @use "../global" as *;
 
 .p-trouble {
-  padding-top: rem(54);
-  padding-bottom: rem(72);
+  padding-top: rem(40);
+  padding-bottom: rem(24);
+  @include mq("md"){
+    padding-top: rem(54);
+    padding-bottom: rem(72);
+    
+  }
 }
 
 .p-trouble__head {
   text-align: center;
-  margin-bottom: rem(32);
+  margin-bottom: rem(24);
+  @include mq(md){
+    margin-bottom: rem(32);
+    
+  }
 }
+
 
 .p-trouble__title {
   font-family: "Noto Sans JP", sans-serif;
   font-weight: 900;
   color: #00bb99;
-  font-size: rem(28);
+  font-size: rem(24);
   line-height: 1.33;
   margin-top: 0;
   margin-bottom: rem(12);
@@ -66,11 +76,12 @@
 
 .p-trouble__figure {
   width: 100%;
-  max-width: rem(305);
-  margin: 0 auto;
-
-  @include mq("md") {
-    margin: 0;
+  max-width: rem(200);
+  margin-right: auto;
+  margin-left: auto;
+  @include mq(md){
+    
+    max-width: rem(305);
   }
 }
 
@@ -107,8 +118,8 @@
 
 .p-trouble__icon {
   flex: 0 0 auto;
-  width: rem(36);
-  height: rem(36);
+  width: rem(24);
+  height: rem(24);
   margin-top: rem(2);
 
   @include mq("md") {
