Integrate Google Fonts for improved typography; update stylesheet link for cache busting and adjust SVG attributes for consistency. Refactor title text structure in the main visual section for better semantics and styling. Modify font settings in SASS for enhanced design consistency.

--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -17,7 +17,7 @@ $padding-sp: 20px;
 // フォント設定
 ////////////////////
 
-$base-font-family: "";
+$base-font-family: "Noto Sans JP", sans-serif;
 $second-font-family: "";
 // ※検証ツールでしっかり反映されているか確認する
 
