Update index.html and SASS styles for consultation section; change call-to-action text for clarity and add new styling for small text elements. Adjust stylesheet link for cache busting.

--- a/src/sass/project/_p-mv.scss
+++ b/src/sass/project/_p-mv.scss
@@ -265,3 +265,10 @@
 .js-mv-img {
   opacity: 0;
 }
+.p-mv__cta-small {
+  font-size: rem(14);
+  line-height: 1.5;
+  text-align: center;
+  margin-top: rem(12);
+  color: #fff;
+}
